--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,14 @@
     "chart.js": "^3.9.1",
     "chartjs-adapter-moment": "^1.0.0",
     "moment": "^2.29.4",
+    "ol": "^7.1.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-moment": "^1.1.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "rlayers": "^1.4.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
