--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "rlayers": "^1.4.5",
+    "swagger-ui-react": "^4.15.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
