Add max values and max value interval to environment variables.

--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 DB_TYPE = 'sqlite'
 DB_CONNECTION_STRING = 'bin/test.db'
+
+MAX_VALUES = '100000'
+MAX_VALUE_INTERVAL = '1'
+
 PORT = '8080'
 MODE = 'dev'
