--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 API_PATH = 'http://localhost:3000'
 
 DB_TYPE = 'sqlite'
-DB_CONNECTION_STRING = 'bin/test.db'
+DB_CONNECTION_STRING = 'bin/test.db?_foreign_keys=on'
 
 MAX_VALUES = '100000'
 MAX_VALUE_INTERVAL = '1'
