Add DISABLE_SIGN_UP to environment configuration.

--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ API_PATH = 'http://localhost:3000'
 DB_TYPE = 'sqlite'
 DB_CONNECTION_STRING = 'bin/test.db?_foreign_keys=on'
 
+DISABLE_SIGN_UP = 'false'
+
 MAX_VALUES = '100000'
 MAX_VALUE_INTERVAL = '1'
 
