--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,11 +18,8 @@ jobs:
       with:
         go-version: 1.18
 
-    - name: Navigate to the backend folder
-      run: cd backend
-
     - name: Build
-      run: make
+      run: cd backend && make
 
     - name: Test
-      run: make test
+      run: cd backend && make test
