--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,3 +23,19 @@ jobs:
 
     - name: Test
       run: cd backend && make test
+
+  build-windows:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: 1.18
+
+    - name: Build
+      run: cd backend && make
+
+    - name: Test
+      run: cd backend && make test
