--- a/android-matter-home-app/app/build.gradle
+++ b/android-matter-home-app/app/build.gradle
@@ -60,6 +60,7 @@ android {
             versionNameSuffix = "-targetcommissioner"
         }
     }
+    namespace 'com.google.homesampleapp'
 }
 
 dependencies {
@@ -109,6 +110,9 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test:rules:1.4.0'
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
+
+    //http request dependency
+    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
 }
 
 protobuf {
