--- a/android-matter-home-app/app/build.gradle
+++ b/android-matter-home-app/app/build.gradle
@@ -38,6 +38,7 @@ android {
     }
     buildFeatures {
         dataBinding true
+        viewBinding true
     }
     sourceSets {
         main {
@@ -92,6 +93,7 @@ dependencies {
     implementation "androidx.datastore:datastore:$dataStoreVersion"
     implementation 'androidx.datastore:datastore-core:1.0.0'
     implementation 'com.google.protobuf:protobuf-javalite:3.18.0'
+    implementation 'androidx.annotation:annotation:1.3.0'
 
     // Hilt
     kapt 'com.google.dagger:hilt-compiler:2.41'
