--- a/android-matter-home-app/app/src/main/AndroidManifest.xml
+++ b/android-matter-home-app/app/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.codinginflow.okhttprequestexample">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
