--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "swagger-ui-react": "^4.15.5",
+    "swr": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
