--- a/android-matter-home-app/app/src/main/AndroidManifest.xml
+++ b/android-matter-home-app/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         android:name="com.google.homesampleapp.GHSAFMApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Matter Trackr"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GHSAFM">
