--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@
 backend/backend.iml
 frontend/frontend.iml
 backend/bin/*
+backend/bin
+
+# history folder created by VSCode that is not needed in repo
+.history
+.history/
+.history/*
