--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 API_PATH = 'http://localhost:3000'
 
 DB_TYPE = 'mysql'
-DB_CONNECTION_STRING = 'trackr:trackr@tcp(127.0.0.1:3306)/trackr?charset=utf8mb4&parseTime=True&loc=Local'
+DB_CONNECTION_STRING = 'trackr:trackr@tcp(host.docker.internal:3306)/trackr?charset=utf8mb4&parseTime=True&loc=Local'
 
 #DB_TYPE = 'sqlite'
 #DB_CONNECTION_STRING = 'bin/test.db?_foreign_keys=on'
