--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,6 @@
 API_PATH = 'http://localhost:3000'
+DOCKER_ADDRESS = '192.168.1.12'
+LOCAL_ADDRESS = '127.0.0.1'
 
 DB_TYPE = 'mysql'
 DB_CONNECTION_STRING = 'trackr:trackr@tcp(host.docker.internal:3306)/trackr?charset=utf8mb4&parseTime=True&loc=Local'
