Set env to production

--- a/backend/.env
+++ b/backend/.env
@@ -2,11 +2,11 @@ API_PATH = 'http://localhost:3000'
 DOCKER_ADDRESS = '172.19.0.3'
 LOCAL_ADDRESS = '127.0.0.1'
 
-#DB_TYPE = 'mysql'
-#DB_CONNECTION_STRING = 'trackr:trackr@tcp(host.docker.internal:3306)/trackr?charset=utf8mb4&parseTime=True&loc=Local'
+DB_TYPE = 'mysql'
+DB_CONNECTION_STRING = 'trackr:trackr@tcp(host.docker.internal:3306)/trackr?charset=utf8mb4&parseTime=True&loc=Local'
 
-DB_TYPE = 'sqlite'
-DB_CONNECTION_STRING = 'bin/test.db?_foreign_keys=on'
+#DB_TYPE = 'sqlite'
+#DB_CONNECTION_STRING = 'bin/test.db?_foreign_keys=on'
 
 DISABLE_SIGN_UP = 'false'
 
