--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,8 @@ services:
         networks:
             trackr:
                 ipv4_address: 172.18.0.3
+        extra_hosts:
+            - "host.docker.internal:host-gateway"
 
     app:
         build: ./frontend
@@ -49,6 +51,8 @@ services:
         networks:
             trackr:
                 ipv4_address: 172.18.0.2
+        extra_hosts:
+            - "host.docker.internal:host-gateway"
 
 volumes:
     data:
