Update backend API path to production

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-API_PATH = 'http://localhost:3000'
+API_PATH = 'http://wryneck.cs.umanitoba.ca:3000'
 DOCKER_ADDRESS = '172.18.0.2'
 LOCAL_ADDRESS = '127.0.0.1'
 
