--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,67 +1,78 @@
 version: "3.9"
 
 services:
-    database:
-        image: mysql:8.0.32-debian
-        container_name: trackr-db
-        restart: always
-        ports:
-            - "3306:3306"
-        environment:
-            MYSQL_ROOT_PASSWORD: "trackr"
-            MYSQL_DATABASE: "trackr"
-            MYSQL_USER: "trackr"
-            MYSQL_PASSWORD: "trackr"
-        healthcheck:
-            test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
-            interval: 5s
-            timeout: 10s
-            retries: 10
-        networks:
-            trackr:
-                ipv4_address: 172.18.0.4
+  database:
+    image: mysql:8.0.32-debian
+    container_name: trackr-db
+    restart: always
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: "trackr"
+      MYSQL_DATABASE: "trackr"
+      MYSQL_USER: "trackr"
+      MYSQL_PASSWORD: "trackr"
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      interval: 10s
+      timeout: 10s
+      retries: 10
+    networks:
+      trackr:
+        aliases:
+          - database
 
-    server:
-        build: ./backend
-        container_name: trackr-server
-        ports:
-            - "8080:8080"
-        volumes:
-            - .:/usr/app
-        links:
-            - database
-        depends_on:
-            database:
-                condition: service_healthy
-        restart: always
-        networks:
-            trackr:
-                ipv4_address: 172.18.0.3
-        extra_hosts:
-            - "host.docker.internal:host-gateway"
+  nginx:
+    image: nginx:alpine
+    container_name: trackr-nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - server
+    restart: always
+    networks:
+      trackr:
+        aliases:
+          - nginx
 
-    app:
-        build: ./frontend
-        container_name: trackr-frontend
-        ports:
-            - "3000:3000"
-        volumes:
-            - .:/usr/app
-        restart: always
-        networks:
-            trackr:
-                ipv4_address: 172.18.0.2
-        extra_hosts:
-            - "host.docker.internal:host-gateway"
+  server:
+    build: ./backend
+    volumes:
+      - .:/usr/app
+    depends_on:
+      database:
+        condition: service_healthy
+    restart: always
+    networks:
+      trackr:
+        aliases:
+          - server
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+
+  app:
+    build: ./frontend
+    container_name: trackr-frontend
+    ports:
+      - "3000:3000"
+    volumes:
+      - .:/usr/app
+    restart: always
+    networks:
+      trackr:
+        aliases:
+          - app
 
 volumes:
-    data:
-        driver: local
+  data:
+    driver: local
 
 networks:
-    trackr:
-        driver: bridge
-        ipam:
-            config:
-                - subnet: 172.18.0.0/16
-                  gateway: 172.18.0.1
+  trackr:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.18.0.0/16
+          gateway: 172.18.0.1
