--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@ backend/bin/go_build_main_go.exe
 backend/bin/test.db
 .idea
 *.iml
+/.vs/4560 Project/FileContentIndex/513e7a44-bf48-45ca-b643-1b9d7b1f65e3.vsidx
+/.vs/4560 Project/FileContentIndex
+/.vs/4560 Project/v17/.wsuo
+/.vs/slnx.sqlite
+/.vs/VSWorkspaceState.json
