--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ backend/bin/test.db
 /.vs/4560 Project/v17/.wsuo
 /.vs/slnx.sqlite
 /.vs/VSWorkspaceState.json
+/Packages/dotnet/Trackr/obj
+/Packages/dotnet/Trackr/.vs/Trackr
